[tool.poetry]
name = "pymatrixbot"
version = "0.1.0"
description = ""
authors = ["jonmatthis <jonmatthis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simplematrixbotlib = "^2.11.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
langchain-anthropic = "^0.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
